# seo-automation-orchestrator

./: .dockerignore  .env.example  .env.production.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  Dockerfile  README.md  ROADMAP.md  SECURITY.md  alembic.ini  compose.production.yaml  compose.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
app/: __init__.py  bot.py  main.py  webhook_bot.py  worker.py
app/bootstrap/: import_projects.py  wiring.py
app/core/: __init__.py  config.py  db.py  logging.py  models.py  redis.py  secrets.py  slug.py  storage.py
app/interfaces/: __init__.py
app/interfaces/api/: __init__.py  app.py  dependencies.py  schemas.py
app/interfaces/bot/: __init__.py  access.py  app.py  handlers.py  keyboards.py  polling.py  services.py  webhook.py
app/interfaces/worker/: __init__.py  jobs.py  runner.py
docs/: indexnow.md  openai-codex-oss-application.md  yandex-oauth-and-recrawl.md
migrations/: README  env.py
migrations/versions/: 0001_create_project_task_taskfile.py  0002_add_task_json_payloads.py  0003_make_task_project_optional.py  0004_split_project_start_url_and_yandex_host.py  0005_add_task_cancel_requested.py  0006_add_task_batches.py  0007_add_crawl_segment_and_queue_name.py  0008_make_project_sitemap_optional.py  0009_add_bot_access_users.py  0010_add_yandex_oauth_credentials.py  0011_add_yandex_recrawl_batch_types.py  0012_add_yandex_manual_token_flag.py  0013_add_indexnow.py  0014_add_indexnow_sitemap_replace_batch_types.py
(+53 files in other folders)
