[project]
name = "mega-tools"
version = "0.1.0"
description = "Internal SEO tool with a modular monolith architecture."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.18,<4.0",
    "aiohttp-socks>=0.10,<1.0",
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
    "SQLAlchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.1,<4.0",
    "redis>=5.0,<6.0",
    "rq>=1.16,<2.0",
    "openpyxl>=3.1,<4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
